WIP on main: 1e2b5a0 neural network

--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +185,7 @@
      "text": [
       "Original image shape: (28, 28)\n",
       "Flattened image shape:  (784,)\n",
-      "X shape: (784, 1000)\n",
-      "T shape: (10, 1000)\n"
+      "X shape: (784, 1000)\n"
      ]
     }
    ],
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +306,13 @@
       " ...\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
       " [0. 0. 0. ... 1. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "W_hat shape: (10, 784)\n",
       "W_hat: [[ 0.00000000e+00  3.12886796e-12 -9.20112965e-11 ...  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
@@ -395,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -514,19 +519,50 @@
     "\n",
     "## Learning rate parameter\n",
     "\n",
-    "Like we mentioned before, we want to make *small nudges* to our W matrix each iteration, so we will scale that set of vectors by $\\alpha$, a scalar we will call a \"learning rate\". This learning rate is a parameter we define, and basically will affect the size of the \"step\" we take towards the error minimization. If we take big steps, we risk not finding a global optima, and if we take small steps we risk taking a long time to find the optima. \n",
+    "Like we mentioned before, we want to make *small nudges* to our W matrix each iteration, so we will scale that set of vectors by $\\alpha$, a scalar we will call a \"learning rate\". This learning rate is a parameter we define, and basically will affect the size of the \"step\" we take towards the error minimization. If we take big steps, we risk not finding a global optima, and if we take small steps we risk taking a long time to find the optima. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "## Error optimization formula\n",
+    "## Backpropagation\n",
     "\n",
-    "So we finally arrive at our formula to update our W matrix. It simply is:\n",
+    "We now have all the elements to try to minimize our error function. \n",
     "\n",
-    "$$\n",
+    "Remember that all we can modify are the W matrixes ($W_h,W_o$ for the weight matrix of our hidden and output layers respectively)\n",
     "\n",
-    "W_{new} = W_{old} - \\alpha Gradient\n",
+    "Given the error function:\n",
+    "$$ E(t, y) = \\sum \\left( \\text{norm}(t - y)^2 \\right) $$\n",
     "\n",
-    "$$\n",
+    "Where:\n",
+    "- $ t $ is the true output.\n",
+    "- $ y $ is the predicted output.\n",
     "\n",
-    "So like we said, we take an \"alpha\" size step in the opposite direction of the gradient.\n"
+    "We want to find out the impact of a very small change in each element of the W matrixes on the computed error at a specific evaluation point. That is why we calculate the gradient of the error function with respect to the weights as follows:\n",
+    "\n",
+    "1. **Output Layer (Layer o)**: \n",
+    "    - Using the *chain rule* we start from the \"end\", so the output layer first\n",
+    "    \n",
+    "    - The gradient for weights in the output layer is:\n",
+    "      $$\n",
+    "      \\frac{\\partial E}{\\partial W^{[o]}} = \\frac{\\partial E}{\\partial y} \\cdot \\frac{\\partial y}{\\partial z^{[o]}} \\cdot \\frac{\\partial z^{[o]}}{\\partial W^{[o]}}\n",
+    "      $$\n",
+    "      where $ \\frac{\\partial y}{\\partial z^{[o]}} $ is the derivative of the sigmoid function and $ \\frac{\\partial z^{[o]}}{\\partial W^{[o]}} $ is the activation from the hidden layer.\n",
+    "    - The derivative of the error function with respect to the output is \n",
+    "    $$ \\frac{\\partial E}{\\partial y} = 2 \\times (y - t) $$\n",
+    "\n",
+    "2. **Hidden Layer (Layer h)**:\n",
+    "    - The derivative of the error function with respect to the activations of the hidden layer is computed by backpropagating the error from the output layer.\n",
+    "    - The gradient for weights in the hidden layer is:\n",
+    "      $$\n",
+    "      \\frac{\\partial E}{\\partial W^{[h]}} = \\left( \\frac{\\partial E}{\\partial z^{[o]}} \\cdot W^{[o]} \\right) \\cdot \\frac{\\partial z^{[o]}}{\\partial a^{[h]}} \\cdot \\frac{\\partial a^{[h]}}{\\partial z^{[h]}} \\cdot \\frac{\\partial z^{[h]}}{\\partial W^{[h]}}\n",
+    "      $$\n",
+    "\n",
+    "In these equations:\n",
+    "- $ \\frac{\\partial a^{[l]}}{\\partial z^{[l]}} $ is the derivative of the sigmoid function at layer $ l $.\n",
+    "- $ \\frac{\\partial z^{[l]}}{\\partial W^{[l]}} $ is the activation from the previous layer (or input for the first layer).\n"
    ]
   },
   {
@@ -548,8 +584,12 @@
     "- Evaluate the error function for a specific point\n",
     "\n",
     "And most important of all, we must put everything together in our optimization function, which will:\n",
-    "1. Take as input the current W matrix, X_train, T_train, alpha, and desired number of iterations\n",
-    "1. Bar"
+    "1. Take as input the current W matrixes ($W_o,W_h$), X_train, T_train, alpha, and desired number of iterations\n",
+    "1. For each iteration:\n",
+    "    1. Evaluate error function\n",
+    "    1. Calculate gradient at evaluation point\n",
+    "    1. Update W based on alpha x gradient\n",
+    "1. Output final W matrixes ($W_o,W_h$)"
    ]
   },
   {
@@ -559,20 +599,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W_h shape: (800, 784)\n",
+      "W_h sample:  [[-0.00595303 -0.01198755 -0.02285097]\n",
+      " [ 0.00772736 -0.0087801   0.01353691]\n",
+      " [ 0.00301542  0.02482687  0.00506408]]\n",
+      "b_h shape: (800, 1)\n",
+      "b_h sample:  [[0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
+      "W_o shape: (10, 800)\n",
+      "W_o sample:  [[-0.00047675  0.00496244 -0.00329674]\n",
+      " [ 0.00215122 -0.00086243 -0.01569273]\n",
+      " [ 0.00721881 -0.00851019  0.00662789]]\n",
+      "b_o shape: (10, 1)\n",
+      "b_o sample:  [[0.]\n",
+      " [0.]\n",
+      " [0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "alpha = 0.01  # learning rate\n",
-    "\n",
+    "iterations = 100  # number of iterations\n",
     "\n",
     "\n",
     "def sigmoid(z):\n",
     "    \"\"\"\n",
     "    Computes the sigmoid function.\n",
     "    \"\"\"\n",
-    "    return 1 / (1 + np.exp(-z))"
+    "    return 1 / (1 + np.exp(-z))\n",
+    "\n",
+    "\n",
+    "def initialize_parameters(X, y):\n",
+    "    \"\"\"\n",
+    "    Initializes the weights and biases\n",
+    "    \"h\" sufix indicates hidden layer, and \"o\" output layer\n",
+    "    The output differentiates W and b for each layer\n",
+    "    \"\"\"\n",
+    "\n",
+    "    n_x = X.shape[0]  # number of inputs\n",
+    "    n_h = X.shape[1]  # number of hidden rows\n",
+    "    n_y = y.shape[0]  # number of outputs\n",
+    "\n",
+    "    W_h = np.random.randn(n_h, n_x) * 0.01  # initial random weights for hidden layer\n",
+    "    b_h = np.zeros((n_h, 1))  # initial zero bias for hidden layer\n",
+    "\n",
+    "    W_o = np.random.randn(n_y, n_h) * 0.01  # weights for output layer\n",
+    "    b_o = np.zeros((n_y, 1))  # bias for output layer\n",
+    "\n",
+    "    return W_h, b_h, W_o, b_o\n",
+    "\n",
+    "\n",
+    "W_h, b_h, W_o, b_o = initialize_parameters(X_train, T_train)\n",
+    "print(\"W_h shape:\", W_h.shape)\n",
+    "print(\"W_h sample: \", W_h[0:3, 0:3])\n",
+    "print(\"b_h shape:\", b_h.shape)\n",
+    "print(\"b_h sample: \", b_h[0:3, 0:3])\n",
+    "print(\"W_o shape:\", W_o.shape)\n",
+    "print(\"W_o sample: \", W_o[0:3, 0:3])\n",
+    "print(\"b_o shape:\", b_o.shape)\n",
+    "print(\"b_o sample: \", b_o[0:3, 0:3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_h shape: (800, 800)\n",
+      "Error: 2058.929858196855\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sigmoid_derivative(x):\n",
+    "    return sigmoid(x) * (1.0 - sigmoid(x))\n",
+    "\n",
+    "\n",
+    "def error_function(t, y):\n",
+    "    \"\"\"\n",
+    "    Computes the error between the predicted output and the true output.\n",
+    "    Given that some errors may be positive and some may be negative, we calcu-\n",
+    "    late the total error term of the function by squaring the norms of the individual\n",
+    "    errors and summing over all observations. We square the terms instead of ap-\n",
+    "    plying the absolute value function so that we can take the derivative\n",
+    "    \"\"\"\n",
+    "    return np.sum(np.square(np.linalg.norm(t - y)))\n",
+    "\n",
+    "\n",
+    "# Lets make an initial prediction using W_h and W_o\n",
+    "# and calculate the error function\n",
+    "\n",
+    "X_h = sigmoid(np.dot(W_h, X_train) + b_h)  # hidden layer\n",
+    "print(\"X_h shape:\", X_h.shape)\n",
+    "y_o = sigmoid(np.dot(W_o, X_h) + b_o)  # output layer\n",
+    "error = error_function(T_train, y_o)\n",
+    "print(\"Error:\", error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dE_dy shape: (10, 800)\n",
+      "dy_dXo shape: (10, 800)\n",
+      "Gradient output shape: (10, 800)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dE_dy = 2 * (y_o - T_train)  # Derivative of the error function with respect to y\n",
+    "print(\"dE_dy shape:\", dE_dy.shape)\n",
+    "\n",
+    "dy_dXo = sigmoid_derivative(\n",
+    "    np.dot(W_o, X_h) + b_o\n",
+    ")  # Derivative of the output layer with respect to Xo\n",
+    "print(\"dy_dXo shape:\", dy_dXo.shape)\n",
+    "\n",
+    "gradient_output = np.dot(dE_dy * dy_dXo, X_h.T)  # Gradient of the output layer\n",
+    "print(\"Gradient output shape:\", gradient_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
