WIP on main: 1e2b5a0 neural network

--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,13 +306,7 @@
       " ...\n",
       " [0. 0. 0. ... 0. 0. 0.]\n",
       " [0. 0. 0. ... 1. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
       "W_hat shape: (10, 784)\n",
       "W_hat: [[ 0.00000000e+00  3.12886796e-12 -9.20112965e-11 ...  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00]\n",
@@ -400,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -529,6 +523,8 @@
     "\n",
     "## Backpropagation\n",
     "\n",
+    "*Shoutout to https://www.3blue1brown.com/lessons/backpropagation-calculus for an excelent summary on backpropagation calculus*\n",
+    "\n",
     "We now have all the elements to try to minimize our error function. \n",
     "\n",
     "Remember that all we can modify are the W matrixes ($W_h,W_o$ for the weight matrix of our hidden and output layers respectively)\n",
@@ -599,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -607,17 +603,17 @@
      "output_type": "stream",
      "text": [
       "W_h shape: (800, 784)\n",
-      "W_h sample:  [[-0.00595303 -0.01198755 -0.02285097]\n",
-      " [ 0.00772736 -0.0087801   0.01353691]\n",
-      " [ 0.00301542  0.02482687  0.00506408]]\n",
+      "W_h sample:  [[-0.00561701 -0.01074312  0.00349214]\n",
+      " [ 0.00094865  0.0083395  -0.00744727]\n",
+      " [ 0.00400661  0.01065634  0.01462363]]\n",
       "b_h shape: (800, 1)\n",
       "b_h sample:  [[0.]\n",
       " [0.]\n",
       " [0.]]\n",
       "W_o shape: (10, 800)\n",
-      "W_o sample:  [[-0.00047675  0.00496244 -0.00329674]\n",
-      " [ 0.00215122 -0.00086243 -0.01569273]\n",
-      " [ 0.00721881 -0.00851019  0.00662789]]\n",
+      "W_o sample:  [[ 0.00214655 -0.0080048  -0.01754789]\n",
+      " [-0.01553493 -0.01414214  0.00988656]\n",
+      " [-0.00322246 -0.00727184  0.01185712]]\n",
       "b_o shape: (10, 1)\n",
       "b_o sample:  [[0.]\n",
       " [0.]\n",
@@ -670,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +674,7 @@
      "output_type": "stream",
      "text": [
       "X_h shape: (800, 800)\n",
-      "Error: 2058.929858196855\n"
+      "Error: 2019.9668916117782\n"
      ]
     }
    ],
@@ -709,8 +705,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now calculate the gradient for each of the weight matrixes, with the following definitions:\n",
+    "- $E$ is our cost (error) function\n",
+    "- $W_o$ is the weight matrix for the output layer\n",
+    "- $sigmoid_o$ is the output of the activation (sigmoid) function of the output layer (the final output, so alternatively we could call it $y$)\n",
+    "- $z_o$ is an arbitrary name for the input for the activation function (WX+b , or WX in our matrix form). In this case is the input for the final activation $sigmoid_o$, so it would be $W_o*sigmoid_h$ (the output layer weight matrix times the output from the hidden layer)\n",
+    "\n",
+    "\n",
+    "### $W_o$ matrix gradient\n",
+    "\n",
+    "$$\n",
+    "      \\frac{\\partial E}{\\partial W_o} = \\frac{\\partial E}{\\partial sigmoid_o} \\cdot \\frac{\\partial sigmoid_o}{\\partial z_o} \\cdot \\frac{\\partial z_o}{\\partial W_o}\n",
+    "$$\n",
+    "\n",
+    "Lets calculate each partial derivative:\n",
+    "\n",
+    "#### Error function derivative\n",
+    "The error or cost function can be expressed as\n",
+    "\n",
+    "$$\n",
+    "E = (sigmoid_o - t)^2\n",
+    "$$\n",
+    "\n",
+    "So taking the partial derivative with respect to $sigmoid_o$ gives us\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial E}{\\partial sigmoid_o} = 2 * (sigmoid_o - t)\n",
+    "$$\n",
+    "\n",
+    "#### Sigmoid function derivative\n",
+    "The partial derivative of the sigmoid function with respect to $z_o$ is\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial sigmoid_o}{\\partial z_o} =   sigmoid(z_o) \\cdot (1 - sigmoid(z_o))\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "#### z derivative\n",
+    "\n",
+    "Finally, deriving $z_o$ with respect to $W_o$ is simply $sigmoid_h$ (the output of the hidden layer)\n",
+    "\n",
+    "\n",
+    "### $W_h$ matrix gradient\n",
+    "\n",
+    "The gradient of the errror function with respect to the $W_h$ matrix involves more steps:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    " \\frac{\\partial E}{\\partial W_h} = \\frac{\\partial E}{\\partial sigmoid_o} \\cdot \\frac{\\partial sigmoid_o}{\\partial z_o} \\cdot \\frac{\\partial z_o}{\\partial sigmoid_h} \\cdot \\frac{\\partial sigmoid_h}{\\partial z_h} \\cdot \\frac{\\partial z_h}{\\partial W_h} \n",
+    "$$\n",
+    "\n",
+    "We already calculated the first two elements. Let's calculate the rest:\n",
+    "\n",
+    "#### z derivative ($W_h$)\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial z_o}{\\partial sigmoid_h} = W_h\n",
+    "$$\n",
+    "\n",
+    "#### Sigmoid ($sigmoid_h$) function derivative\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\\frac{\\partial sigmoid_h}{\\partial z_h} =   sigmoid(z_h) \\cdot (1 - sigmoid(z_h))\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "#### z derivative ($W_h$)\n",
+    "\n",
+    "Given we have only 1 hidden layer, the partial derivative will be just the input matrix $X$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial z_h}{\\partial W_h} = X\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
