WIP on main: 1e2b5a0 neural network

--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -786,38 +786,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dE_dy shape: (10, 800)\n",
-      "dy_dXo shape: (10, 800)\n",
-      "Gradient output shape: (10, 800)\n"
+      "dE_dy_o shape: (10, 800)\n",
+      "dy_o_dz_o shape: (10, 800)\n",
+      "dz_o_dW_o shape: (800, 800)\n",
+      "dE_dW_o shape: (10, 800)\n"
      ]
     }
    ],
    "source": [
-    "dE_dy = 2 * (y_o - T_train)  # Derivative of the error function with respect to y\n",
-    "print(\"dE_dy shape:\", dE_dy.shape)\n",
+    "'''\n",
+    "W_o matrix gradient calculation\n",
+    "'''\n",
     "\n",
-    "dy_dXo = sigmoid_derivative(\n",
-    "    np.dot(W_o, X_h) + b_o\n",
-    ")  # Derivative of the output layer with respect to Xo\n",
-    "print(\"dy_dXo shape:\", dy_dXo.shape)\n",
+    "# First we calculate the gradient of the error function with respect to the output layer weight matrix W_o\n",
+    "# We will use the chain rule for that\n",
     "\n",
-    "gradient_output = np.dot(dE_dy * dy_dXo, X_h.T)  # Gradient of the output layer\n",
-    "print(\"Gradient output shape:\", gradient_output.shape)"
+    "# First we calculate the derivative of the error function with respect to the output layer activation\n",
+    "\n",
+    "dE_dy_o = -2 * (T_train - y_o)\n",
+    "print(\"dE_dy_o shape:\", dE_dy_o.shape)\n",
+    "\n",
+    "# Next calculate the derivative of the output layer activation with respect to the output layer input\n",
+    "\n",
+    "dy_o_dz_o = sigmoid_derivative(np.dot(W_o, X_h) + b_o)\n",
+    "print(\"dy_o_dz_o shape:\", dy_o_dz_o.shape)\n",
+    "\n",
+    "# Finally we calculate the derivative of the output layer input with respect to the output layer weights\n",
+    "\n",
+    "dz_o_dW_o = X_h\n",
+    "print(\"dz_o_dW_o shape:\", dz_o_dW_o.shape)\n",
+    "\n",
+    "# Now following the chain rule we can calculate the gradient of the error function with respect to the output layer weights\n",
+    "\n",
+    "dE_dW_o = np.dot(dE_dy_o * dy_o_dz_o, dz_o_dW_o.T)\n",
+    "print(\"dE_dW_o shape:\", dE_dW_o.shape)\n",
+    "\n",
+    "#Lets create a function to encapsulate this calculation\n",
+    "\n",
+    "def calculate_gradient_W_o(X, T, W_o, W_h, b_o, b_h):\n",
+    "    \"\"\"\n",
+    "    Calculates the gradient of the error function with respect to the output layer weights\n",
+    "    \"\"\"\n",
+    "    X_h = sigmoid(np.dot(W_h, X) + b_h)  # hidden layer\n",
+    "    y_o = sigmoid(np.dot(W_o, X_h) + b_o)  # output layer\n",
+    "\n",
+    "    dE_dy_o = -2 * (T - y_o)\n",
+    "    dy_o_dz_o = sigmoid_derivative(np.dot(W_o, X_h) + b_o)\n",
+    "    dz_o_dW_o = X_h\n",
+    "\n",
+    "    dE_dW_o = np.dot(dE_dy_o * dy_o_dz_o, dz_o_dW_o.T)\n",
+    "    return dE_dW_o\n",
+    "\n",
+    "# Let's try it out\n",
+    "\n",
+    "dE_dW_o_test = calculate_gradient_W_o(X_train, T_train, W_o, W_h, b_o, b_h)\n",
+    "assert dE_dW_o_test.all() == dE_dW_o.all()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dE_dy_o shape: (10, 800)\n",
+      "dy_o_dz_o shape: (10, 800)\n",
+      "dz_o_dX_h shape: (10, 800)\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "W_h matrix gradient calculation\n",
+    "'''\n",
+    "\n",
+    "# First we calculate the gradient of the error function with respect to the hidden layer weight matrix W_h\n",
+    "# We will use the chain rule for that\n",
+    "\n",
+    "# We already calculated the derivative of the error function with respect to the output layer activation\n",
+    "\n",
+    "print(\"dE_dy_o shape:\", dE_dy_o.shape)\n",
+    "\n",
+    "# We also calculated the derivative of the output layer activation with respect to the output layer input\n",
+    "\n",
+    "print(\"dy_o_dz_o shape:\", dy_o_dz_o.shape)\n",
+    "\n",
+    "# Now we need to calculate the derivative of the output layer input with respect to the hidden layer activation\n",
+    "\n",
+    "dz_o_dX_h = W_o\n",
+    "print(\"dz_o_dX_h shape:\", dz_o_dX_h.shape)"
+   ]
   },
   {
    "cell_type": "code",
