--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -13,38 +13,27 @@
     "(based on \"Introduction to statistical learning\")\n",
     "\n",
     "## Conceptual Overview\n",
-    "- **Purpose**: A neural network aims to build a nonlinear function `f(X)` to predict the response `Y`, using an input vector of variables `X = (X1, X2, ..., Xp)`.\n",
-    "- **Distinction**: Unlike trees, boosting, and generalized additive models, neural networks have a unique structure characterized by layers and units.\n",
+    "**Purpose**: A neural network aims to build a nonlinear function `f(X)` to predict the response `Y`, using an input vector of variables `X = (X1, X2, ..., Xp)`. Unlike trees, boosting, and generalized additive models, neural networks have a unique structure characterized by *layers* and *neurons*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The MNIST dataset\n",
     "\n",
-    "## Neural Network Model\n",
-    "- **Input Layer**: Consists of features `X1, ..., Xp` as units.\n",
-    "- **Hidden Layer**: Each input feeds into `K` hidden units (in this example, `K=5`).\n",
-    "- **Model Representation**:\n",
-    "  $$ f(X) = β0 + ∑_{k=1}^{K} βk g(wk0 + ∑_{j=1}^{p} wkj Xj) $$\n",
-    "- **Activation Functions**: `g(z)` is a nonlinear function. Popular choices are sigmoid and ReLU (Rectified Linear Unit).\n",
+    "According to Wikipedia:\n",
     "\n",
-    "## Activation Functions\n",
-    "- **Sigmoid**: \n",
-    "  $ g(z) = \\frac{1}{1 + e^{-z}} $\n",
-    "- **ReLU**:\n",
-    "  $ g(z) = max(0, z) $\n",
-    "- **Efficiency**: ReLU is preferred for its computational efficiency.\n",
+    "\"The MNIST database (Modified National Institute of Standards and Technology database) is a large database of handwritten digits that is commonly used for training various image processing systems.(...) The black and white images from NIST were normalized to fit into a 28x28 pixel bounding box and anti-aliased, which introduced grayscale levels.[7]\n",
     "\n",
-    "## Computation in Hidden Layer\n",
-    "- **Activations**: Calculated as $Ak = hk(X) = g(wk0 + ∑_{j=1}^{p} wkj Xj)$.\n",
-    "- **Role of Activations**: Similar to basis functions, transforming original features.\n",
+    "The MNIST database contains 60,000 training images and 10,000 testing images.\"\n",
     "\n",
-    "## Output Layer\n",
-    "- **Formulation**: The output is a linear regression in the activations `Ak`.\n",
-    "- **Parameters**: Includes both weights `w` and biases `β`, to be estimated from data.\n",
+    "Instead of using the full MNIST database, we are going to work with mini-mnist-1000 (link: https://github.com/yasserius/mini-mnist-1000), which is \"a small subset of 1000 images from MNIST, 100 images for each digits.\"\n",
     "\n",
-    "## Nonlinearity and Interaction Effects\n",
-    "- Nonlinear activation functions allow the model to capture complex patterns and interactions.\n",
-    "- Example with quadratic `g(z)` illustrates how nonlinear transformations can model interactions.\n",
+    "Given that each image is 2 dimensional, and a neural network input observation must be 1 dimensional, we are going to \"flatten\" (map) each image to a flat $width * height$ dimensional vector.\n",
     "\n",
-    "## Fitting the Neural Network\n",
-    "- **Loss Function**: Typically squared-error loss for quantitative responses.\n",
-    "- **Optimization**: Minimize the sum of squared errors between predictions and actual values."
+    "We are also going to split the dataset on a training and test groups on a 80/20 proportion.\n",
+    "\n"
    ]
   },
   {
@@ -64,14 +53,12 @@
     "\n",
     "## Layers and Vectors\n",
     "\n",
-    "1. **Layers**: In a perceptron, layers are visualized as a series of nodes (each node corresponding to a variable) aligned vertically.\n",
-    "   - An **input layer** is represented by a vector for one observation. For example, vector `x` is `[x1 x2 ... xn]ᵀ` for \"n\" features.\n",
-    "   - With k observations and n features, a layer is represented as a matrix `n × k` .\n",
+    "1. **Layers**: In a perceptron, layers are visualized as a series of neurons or nodes (each node corresponding to a variable) aligned vertically. With n features and k observations, a layer is represented as a matrix `n × k` .\n",
     "\n",
-    "2. **Input Layer (X)**: For a perceptron with two features and `k` observations, the input layer is a `2 × k` matrix (matrix `X`). We are going to model the \"mini MNIST\" data, which will have (28 x 28) input features and 1.000 observations, so the input layer matrix has a 784 x 1.000 shape.\n",
+    "2. **Input Layer (X)**: For example, a perceptron with 2 features and `k` observations, the input layer is a `2 × k` matrix (matrix `X`). We are going to model the \"mini MNIST\" data, which will have (28 x 28) input features and 800 training observations, so the input layer matrix has a 784 x 800 shape.\n",
     "\n",
     "3. **Output Layer (Y)**: \n",
-    "   - The output layer (matrix `Y`) is typically `n × p` in this case we will model each possible digit as a binary variable, so it will have 10 x 1.000 shape.\n",
+    "   - The output layer (matrix `Y`) is typically `n × p` (\"p\" being the number of output features), in this case we will model each possible digit (0 to 9) as a binary variable, so it will have 10 x 80 shape.\n",
     "   - `Y` is the predicted output by the network, different from `T` (label matrix), which is the known output in supervised learning.\n",
     "\n",
     "## Goal of the Neural Network\n",
@@ -119,9 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## mini-MNIST Dataset loading\n",
+    "## Setup\n",
     "\n",
-    "We will be working with a subset of the MNIST dataset"
+    "We must install the required libraries and load the dataset."
    ]
   },
   {
@@ -159,16 +146,7 @@
     }
    ],
    "source": [
-    "%pip install scikit-learn numpy matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(42) # for reproducibility"
+    "%pip install scikit-learn numpy matplotlib seaborn"
    ]
   },
   {
@@ -195,7 +173,10 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import pickle\n",
+    "\n",
+    "np.random.seed(42) # for reproducibility\n",
     "\n",
     "with open('mini-mnist-1000.pickle', 'rb') as f:\n",
     "    data = pickle.load(f)\n",
@@ -218,6 +199,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Flattening the images\n",
+    "\n",
     "Given we are working with a simple perceptron, we must flatten each image into a vector of length 784. After we have done that, we can create a single matrix of all the images, where each row is an image vector."
    ]
   },
@@ -237,9 +220,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
+    "# Lets flatten the images into vectors\n",
     "print(\"Original image shape:\", images[0].shape)  # (28, 28)\n",
     "\n",
     "print(\"Flattened image shape: \", images[0].flatten().shape)\n",
@@ -253,6 +234,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Converting the target variable using one-hot encoding\n",
+    "\n",
     "We also need to convert the labels so that they are one-hot encoded.\n",
     "Given that each label is an integer between 0 and 9, we can create a 10-dimensional vector for each label row.\n",
     "The vector will have a 1 in the position of the digit label and 0s everywhere else (a very *sparse* matrix)."
@@ -283,6 +266,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Train/test split\n",
+    "\n",
     "Before we start coding, let's make sure we separate our dataset into training and test"
    ]
   },
@@ -1125,44 +1110,6 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: seaborn in /Users/krilet/Library/Python/3.9/lib/python/site-packages (0.13.0)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from seaborn) (1.25.0)\n",
-      "Requirement already satisfied: pandas>=1.2 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from seaborn) (2.0.3)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.3 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from seaborn) (3.8.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (4.45.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (1.4.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (23.1)\n",
-      "Requirement already satisfied: pillow>=8 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (10.1.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (3.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (2.8.2)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (6.1.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from pandas>=1.2->seaborn) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from pandas>=1.2->seaborn) (2023.3)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/krilet/Library/Python/3.9/lib/python/site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.3->seaborn) (3.15.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.3->seaborn) (1.15.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install seaborn"
    ]
   },
   {
